cmake_minimum_required(VERSION 3.0.0)
project(section VERSION 0.1.0)

include(CTest)
enable_testing()

add_subdirectory(section1)
add_subdirectory(section2)
add_subdirectory(section3)
add_subdirectory(section4)
add_subdirectory(section5)
add_subdirectory(section6)
add_subdirectory(section7)
add_subdirectory(section8)
add_subdirectory(section9)
add_subdirectory(section10)
add_subdirectory(section11)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
