add_executable(1.1 1.1.cpp)
add_executable(1.10 1.10.cpp)
add_executable(1.11 1.11.cpp)
add_executable(1.12 1.12.cpp)
add_executable(1.13.1 1.13.1.cpp)
add_executable(1.13.2 1.13.2.cpp)
add_executable(1.13.3 1.13.3.cpp)
add_executable(1.15.1 1.15.1.cpp)
add_executable(1.15.2 1.15.2.cpp)
add_executable(1.16 1.16.cpp)
add_executable(1.19 1.19.cpp)
add_executable(1.2 1.2.cpp)
add_executable(1.20 1.20.cpp)
add_executable(1.21 1.21.cpp)
add_executable(1.22 1.22.cpp)
add_executable(1.23 1.23.cpp)
add_executable(1.3 1.3.cpp)
add_executable(1.4 1.4.cpp)
add_executable(1.5 1.5.cpp)
add_executable(1.6 1.6.cpp)
add_executable(1.7 1.7.cpp)
add_executable(1.8 1.8.cpp)
add_executable(1.9 1.9.cpp)
add_executable(ex6_if ex6_if.cpp)
add_executable(ex7_Sales_item ex7_Sales_item.cpp)
add_executable(ex8_Sales_item2 ex8_Sales_item2.cpp)
add_executable(ex9_Sales_item3 ex9_Sales_item3.cpp)
