add_executable(11.10 11.10.cpp)
add_executable(11.11 11.11.cpp)
add_executable(11.12 11.12.cpp)
add_executable(11.13 11.13.cpp)
add_executable(11.14 11.14.cpp)
add_executable(11.15 11.15.cpp)
add_executable(11.16 11.16.cpp)
add_executable(11.17 11.17.cpp)
add_executable(11.18 11.18.cpp)
add_executable(11.20 11.20.cpp)
add_executable(11.22 11.22.cpp)
add_executable(11.23 11.23.cpp)
add_executable(11.24 11.24.cpp)
add_executable(11.25 11.25.cpp)
add_executable(11.28 11.28.cpp)
add_executable(11.3 11.3.cpp)
add_executable(11.31 11.31.cpp)
add_executable(11.32 11.32.cpp)
add_executable(11.33 11.33.cpp)
add_executable(11.38 11.38.cpp)
add_executable(11.4 11.4.cpp)
add_executable(11.7 11.7.cpp)
add_executable(11.8 11.8.cpp)
add_executable(11.9 11.9.cpp)
