add_executable(3.10 3.10.cpp)
add_executable(3.11 3.11.cpp)
add_executable(3.12 3.12.cpp)
add_executable(3.13 3.13.cpp)
add_executable(3.14 3.14.cpp)
add_executable(3.15 3.15.cpp)
add_executable(3.16 3.16.cpp)
add_executable(3.17 3.17.cpp)
add_executable(3.18 3.18.cpp)
add_executable(3.19 3.19.cpp)
add_executable(3.2 3.2.cpp)
add_executable(3.20 3.20.cpp)
add_executable(3.21 3.21.cpp)
add_executable(3.22 3.22.cpp)
add_executable(3.23 3.23.cpp)
add_executable(3.24 3.24.cpp)
add_executable(3.25 3.25.cpp)
add_executable(3.26 3.26.cpp)
add_executable(3.27 3.27.cpp)
add_executable(3.28 3.28.cpp)
add_executable(3.3 3.3.cpp)
add_executable(3.30 3.30.cpp)
add_executable(3.31 3.31.cpp)
add_executable(3.32 3.32.cpp)
add_executable(3.34 3.34.cpp)
add_executable(3.35 3.35.cpp)
add_executable(3.36 3.36.cpp)
add_executable(3.37 3.37.cpp)
add_executable(3.38 3.38.cpp)
add_executable(3.39 3.39.cpp)
add_executable(3.4 3.4.cpp)
add_executable(3.40 3.40.cpp)
add_executable(3.41 3.41.cpp)
add_executable(3.42 3.42.cpp)
add_executable(3.43 3.43.cpp)
add_executable(3.44 3.44.cpp)
add_executable(3.45 3.45.cpp)
add_executable(3.5 3.5.cpp)
add_executable(3.6 3.6.cpp)
add_executable(3.7 3.7.cpp)
add_executable(3.8 3.8.cpp)
add_executable(3.9 3.9.cpp)
