add_executable(4.1 4.1.cpp)
add_executable(4.10 4.10.cpp)
add_executable(4.11 4.11.cpp)
add_executable(4.13 4.13.cpp)
add_executable(4.14 4.14.cpp)
add_executable(4.15 4.15.cpp)
add_executable(4.16 4.16.cpp)
add_executable(4.18 4.18.cpp)
add_executable(4.19 4.19.cpp)
add_executable(4.2 4.2.cpp)
add_executable(4.20 4.20.cpp)
add_executable(4.21 4.21.cpp)
add_executable(4.22 4.22.cpp)
add_executable(4.23 4.23.cpp)
add_executable(4.24 4.24.cpp)
add_executable(4.25 4.25.cpp)
add_executable(4.27 4.27.cpp)
add_executable(4.28 4.28.cpp)
add_executable(4.29 4.29.cpp)
add_executable(4.30 4.30.cpp)
add_executable(4.31 4.31.cpp)
add_executable(4.32 4.32.cpp)
add_executable(4.33 4.33.cpp)
add_executable(4.34 4.34.cpp)
add_executable(4.35 4.35.cpp)
add_executable(4.36 4.36.cpp)
add_executable(4.37 4.37.cpp)
add_executable(4.38 4.38.cpp)
add_executable(4.4 4.4.cpp)
add_executable(4.5 4.5.cpp)
add_executable(4.6 4.6.cpp)
add_executable(4.7 4.7.cpp)
add_executable(4.9 4.9.cpp)
