add_executable(6.10 6.10.cpp)
add_executable(6.11 6.11.cpp)
add_executable(6.12 6.12.cpp)
add_executable(6.15 6.15.cpp)
add_executable(6.16 6.16.cpp)
add_executable(6.17 6.17.cpp)
add_executable(6.19 6.19.cpp)
add_executable(6.21 6.21.cpp)
add_executable(6.22 6.22.cpp)
add_executable(6.23 6.23.cpp)
add_executable(6.24 6.24.cpp)
add_executable(6.25 6.25.cpp)
add_executable(6.26 6.26.cpp)
add_executable(6.27 6.27.cpp)
add_executable(6.28 6.28.cpp)
add_executable(6.3 6.3.cpp)
add_executable(6.30 6.30.cpp)
add_executable(6.31 6.31.cpp)
add_executable(6.32 6.32.cpp)
add_executable(6.33 6.33.cpp)
add_executable(6.34 6.34.cpp)
add_executable(6.35 6.35.cpp)
add_executable(6.36 6.36.cpp)
add_executable(6.37 6.37.cpp)
add_executable(6.38 6.38.cpp)
add_executable(6.39 6.39.cpp)
add_executable(6.4 6.4.cpp)
add_executable(6.40 6.40.cpp)
add_executable(6.41 6.41.cpp)
add_executable(6.42 6.42.cpp)
add_executable(6.43 6.43.cpp)
add_executable(6.44 6.44.cpp)
add_executable(6.45 6.45.cpp)
add_executable(6.46 6.46.cpp)
add_executable(6.47 6.47.cpp)
add_executable(6.48 6.48.cpp)
add_executable(6.5 6.5.cpp)
add_executable(6.50 6.50.cpp)
add_executable(6.52 6.52.cpp)
add_executable(6.54 6.54.cpp)
add_executable(6.55 6.55.cpp)
add_executable(6.56 6.56.cpp)
add_executable(6.6 6.6.cpp)
add_executable(6.7 6.7.cpp)
