add_executable(7.1 7.1.cpp)
add_executable(7.10 7.10.cpp)
add_executable(7.11 7.11.cpp)
add_executable(7.12 7.12.cpp)
add_executable(7.13 7.13.cpp)
add_executable(7.14 7.14.cpp)
add_executable(7.15 7.15.cpp)
add_executable(7.19 7.19.cpp)
add_executable(7.2 7.2.cpp)
add_executable(7.21 7.21.cpp)
add_executable(7.23 7.23.cpp)
add_executable(7.24 7.24.cpp)
add_executable(7.25 7.25.cpp)
add_executable(7.26 7.26.cpp)
add_executable(7.27 7.27.cpp)
add_executable(7.28 7.28.cpp)
add_executable(7.30 7.30.cpp)
add_executable(7.32 7.32.cpp)
add_executable(7.33 7.33.cpp)
add_executable(7.35 7.35.cpp)
add_executable(7.36 7.36.cpp)
add_executable(7.37 7.37.cpp)
add_executable(7.38 7.38.cpp)
add_executable(7.39 7.39.cpp)
add_executable(7.4 7.4.cpp)
add_executable(7.40 7.40.cpp)
add_executable(7.41 7.41.cpp)
add_executable(7.42 7.42.cpp)
add_executable(7.43 7.43.cpp)
add_executable(7.44 7.44.cpp)
add_executable(7.45 7.45.cpp)
add_executable(7.48 7.48.cpp)
add_executable(7.49 7.49.cpp)
add_executable(7.52 7.52.cpp)
add_executable(7.53 7.53.cpp)
add_executable(7.57 7.57.cpp)
add_executable(7.6 7.6.cpp)
