add_executable(8.1 8.1.cpp)
add_executable(8.10 8.10.cpp)
add_executable(8.11 8.11.cpp)
add_executable(8.13 8.13.cpp)
add_executable(8.2 8.2.cpp)
add_executable(8.4 8.4.cpp)
add_executable(8.5 8.5.cpp)
add_executable(8.6 8.6.cpp)
add_executable(8.7 8.7.cpp)
add_executable(8.8 8.8.cpp)
add_executable(8.9 8.9.cpp)
