add_executable(9.10 9.10.cpp)
add_executable(9.11 9.11.cpp)
add_executable(9.13 9.13.cpp)
add_executable(9.14 9.14.cpp)
add_executable(9.15 9.15.cpp)
add_executable(9.16 9.16.cpp)
add_executable(9.18 9.18.cpp)
add_executable(9.19 9.19.cpp)
add_executable(9.2 9.2.cpp)
add_executable(9.20 9.20.cpp)
add_executable(9.21 9.21.cpp)
add_executable(9.24 9.24.cpp)
add_executable(9.25 9.25.cpp)
add_executable(9.26 9.26.cpp)
add_executable(9.27 9.27.cpp)
add_executable(9.28 9.28.cpp)
add_executable(9.29 9.29.cpp)
add_executable(9.31 9.31.cpp)
add_executable(9.32 9.32.cpp)
add_executable(9.33 9.33.cpp)
add_executable(9.34 9.34.cpp)
add_executable(9.39 9.39.cpp)
add_executable(9.4 9.4.cpp)
add_executable(9.40 9.40.cpp)
add_executable(9.41 9.41.cpp)
add_executable(9.42 9.42.cpp)
add_executable(9.43 9.43.cpp)
add_executable(9.44 9.44.cpp)
add_executable(9.45 9.45.cpp)
add_executable(9.46 9.46.cpp)
add_executable(9.47 9.47.cpp)
add_executable(9.48 9.48.cpp)
add_executable(9.49 9.49.cpp)
add_executable(9.5 9.5.cpp)
add_executable(9.50 9.50.cpp)
add_executable(9.51 9.51.cpp)
add_executable(9.52 9.52.cpp)
add_executable(9.6 9.6.cpp)
add_executable(9.7 9.7.cpp)
add_executable(9.8 9.8.cpp)
